validar info del login

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="76dp"
         android:backgroundTint="@color/claro900"
         android:singleLine="false"
-        android:hint="Ingrese su nombre:"
+        android:hint="Entra el teu nom i cognom:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@color/claro800"
-        android:text="Entrar"
+        android:text="Som-hi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -68,7 +68,7 @@
         android:backgroundTint="@color/claro900"
         android:drawableTint="#3F51B5"
         android:ems="10"
-        android:hint="Entrar numero de preguntas:"
+        android:hint="Entra el numero de preguntes:"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="parent"
