--- a/app/src/main/res/values-v33/themes.xml
+++ b/app/src/main/res/values-v33/themes.xml
@@ -1,11 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
     <style name="Base.Theme.QuizMaster" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:backdropColor">@color/white</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/iconoremovebgpreview</item>
     </style>
-
-
-    <style name="Theme.QuizMaster" parent="Base.Theme.QuizMaster" />
 </resources>
