--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,6 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- fragment_second.xml -->
+
+<!-- fragment_second.xml -->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textViewNombre"
+        android:layout_width="412dp"
+        android:layout_height="128dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="98dp"
+        android:text="Nombre:" />
+
+    <TextView
+        android:id="@+id/textViewNumeroPreguntas"
+        android:layout_width="249dp"
+        android:layout_height="82dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="348dp"
+        android:layout_marginEnd="68dp"
+        android:text="Número de Preguntas:" />
+
+    <!-- Otros elementos de la interfaz de usuario si los tienes -->
+
+</RelativeLayout>
