--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,16 +10,27 @@
     <FrameLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@drawable/fondologin"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <EditText
         android:id="@+id/editTextName"
         android:layout_width="349dp"
         android:layout_height="66dp"
         android:layout_marginTop="116dp"
-        android:backgroundTint="@color/claro100"
-        android:hint="Entra el teu nom i cognom:"
-        android:singleLine="false"
+        android:autofillHints=""
+        android:background="@color/claro700"
+        android:backgroundTint="@color/claro400"
+        android:drawableBottom="@color/claro50"
+        android:foregroundGravity="bottom"
+        android:hint="@string/entra_el_teu_nom_i_cognom"
+        android:shadowColor="@color/claro100"
+        android:singleLine="true"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -31,14 +42,16 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/claro950"
-        android:text="Som-hi"
+        android:background="@color/claro700"
+        android:text="@string/som_hi"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextName"
-        app:layout_constraintVertical_bias="0.731" />
+        app:layout_constraintVertical_bias="0.731"
+        tools:ignore="VisualLintButtonSize" />
 
     <TextView
         android:id="@+id/textView"
@@ -48,7 +61,7 @@
         android:layout_marginBottom="85dp"
         android:fontFamily="sans-serif-condensed"
         android:text="QuizMaster"
-        android:textColor="@color/claro100"
+        android:textColor="@color/black"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,11 +74,16 @@
         android:layout_width="347dp"
         android:layout_height="58dp"
         android:layout_marginTop="124dp"
-        android:backgroundTint="@color/claro100"
+        android:background="@color/claro700"
+        android:backgroundTint="@color/claro400"
         android:drawableTint="@color/claro50"
         android:ems="10"
-        android:hint="Entra el numero de preguntes:"
+        android:hint="@string/entra_el_numero_de_preguntes"
         android:inputType="text"
+        android:shadowColor="@color/claro100"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
