--- a/QuizMasterV2/app/src/main/res/navigation/nav_graph.xml
+++ b/QuizMasterV2/app/src/main/res/navigation/nav_graph.xml
@@ -30,5 +30,8 @@
         <argument
             android:name="Countnumber"
             app:argType="integer" />
+        <argument
+            android:name="nombre"
+            app:argType="string" />
     </fragment>
 </navigation>
