--- a/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/screenBackground"
+    android:background="@drawable/fondoinicio"
     tools:context=".FirstFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/screenBackground2"
         android:padding="16dp">
 
         <Button
@@ -46,16 +46,17 @@
             android:layout_marginTop="40dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="16dp"
-            android:background="@color/design_default_color_secondary_variant"
+            android:background="#25FFFD"
+            android:backgroundTint="#25FFFD"
             android:text="@string/random_bt"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText"
+            app:layout_constraintTop_toBottomOf="@+id/nombreValor"
             app:layout_constraintVertical_bias="1.0" />
 
         <EditText
-            android:id="@+id/editTextText"
+            android:id="@+id/nombreValor"
             android:layout_width="316dp"
             android:layout_height="46dp"
             android:layout_marginStart="47dp"
