--- a/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
@@ -26,14 +26,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textview_random" />
+            app:layout_constraintTop_toBottomOf="@+id/textview_valorNombre" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="62dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="54dp"
             android:text="@string/here_is_a_random_number_between_0_and_d"
             android:textColor="@color/black"
@@ -45,14 +45,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textview_random"
+            android:id="@+id/textview_valorNombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="174dp"
             android:layout_marginTop="240dp"
             android:layout_marginEnd="202dp"
             android:fontFamily="sans-serif"
-            android:text="@string/rletra"
+            android:text="@string/here_is_the_name_s"
             android:textSize="60sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.48"
