--- a/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondoinicio"
+    android:background="@drawable/okk"
     tools:context=".FirstFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -65,6 +65,7 @@
             android:ems="10"
             android:inputType="text"
             android:text="Name"
+            android:drawableStart="@drawable/baseline_person_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.687"
             app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +78,8 @@
             android:layout_marginTop="60dp"
             android:ems="10"
             android:inputType="text"
-            android:text="0"
+            android:text="Number"
+            android:drawableStart="@drawable/numeros"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
