--- a/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
@@ -46,16 +46,15 @@
 
         <TextView
             android:id="@+id/textview_valorNombre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="174dp"
-            android:layout_marginTop="240dp"
+            android:layout_width="343dp"
+            android:layout_height="121dp"
+            android:layout_marginTop="44dp"
             android:layout_marginEnd="202dp"
             android:fontFamily="sans-serif"
             android:text="@string/here_is_the_name_s"
-            android:textSize="60sp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.48"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
