app horizontal funciona!

--- a/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
@@ -2,7 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="@drawable/okk"
     tools:context=".FirstFragment">
@@ -62,10 +62,10 @@
             android:layout_marginStart="47dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="32dp"
+            android:drawableStart="@drawable/baseline_person_24"
             android:ems="10"
             android:inputType="text"
             android:text="Name"
-            android:drawableStart="@drawable/baseline_person_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.687"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,10 +76,10 @@
             android:layout_width="312dp"
             android:layout_height="47dp"
             android:layout_marginTop="60dp"
+            android:drawableStart="@drawable/numeros"
             android:ems="10"
             android:inputType="text"
             android:text="Number"
-            android:drawableStart="@drawable/numeros"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
