--- a/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="136dp"
-            android:layout_marginTop="400dp"
+            android:layout_marginTop="250dp"
             android:layout_marginEnd="141dp"
             android:layout_marginBottom="16dp"
             android:background="@color/material_dynamic_neutral_variant60"
@@ -65,6 +65,7 @@
             android:id="@+id/opcionesRadioGroup"
             android:layout_width="384dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="-70dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="11dp"
             android:orientation="vertical"
@@ -74,11 +75,12 @@
 
             <RadioButton
                 android:id="@+id/opcion1RadioButton"
-                android:layout_width="wrap_content"
+                android:layout_width="272dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="100dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="213dp"
+                android:buttonTint="#FF1010"
                 android:text=""
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -86,8 +88,8 @@
 
             <RadioButton
                 android:id="@+id/opcion2RadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="270dp"
+                android:layout_height="match_parent"
                 android:layout_marginStart="100dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="213dp"
@@ -98,7 +100,7 @@
 
             <RadioButton
                 android:id="@+id/opcion3RadioButton"
-                android:layout_width="wrap_content"
+                android:layout_width="272dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="100dp"
                 android:layout_marginTop="12dp"
@@ -109,5 +111,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/opcion1RadioButton" />
 
         </RadioGroup>
+
+        <ImageView
+            android:id="@+id/questionImageView"
+            android:layout_width="272dp"
+            android:layout_height="251dp"
+            android:layout_marginStart="136dp"
+            android:layout_marginEnd="137dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/opcionesRadioGroup"
+            app:srcCompat="@drawable/ic_launcher_foreground" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
