--- a/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
@@ -29,22 +29,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/opcionesRadioGroup" />
 
+
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/puntaje"
+            android:layout_width="171dp"
+            android:layout_height="58dp"
             android:layout_marginStart="62dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="54dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="40dp"
             android:text="@string/here_is_the_name_s"
             android:textColor="@color/black"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.547"
+            app:layout_constraintBottom_toTopOf="@+id/PreguntaText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <TextView
             android:id="@+id/PreguntaText"
@@ -59,7 +58,7 @@
             app:layout_constraintBottom_toTopOf="@+id/opcion1RadioButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/puntaje" />
 
         <RadioGroup
             android:id="@+id/opcionesRadioGroup"
@@ -122,6 +121,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/opcionesRadioGroup"
             app:srcCompat="@drawable/ic_launcher_foreground" />
+
+
+        <TextView
+            android:id="@+id/puntajeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="58dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="18dp"
+            android:layout_marginBottom="62dp"
+            android:text="Puntaje: 0"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/PreguntaText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/puntaje"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
