--- a/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="136dp"
-            android:layout_marginTop="250dp"
+            android:layout_marginTop="280dp"
             android:layout_marginEnd="141dp"
             android:layout_marginBottom="16dp"
             android:background="@color/material_dynamic_neutral_variant60"
@@ -32,14 +32,14 @@
 
         <TextView
             android:id="@+id/puntaje"
-            android:layout_width="171dp"
-            android:layout_height="58dp"
-            android:layout_marginStart="62dp"
+            android:layout_width="205dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="40dp"
             android:text="@string/here_is_the_name_s"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/PreguntaText"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,9 +50,9 @@
             android:layout_width="0dp"
             android:layout_height="56dp"
             android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp"
-            android:background="#F7F7F7"
+            android:layout_marginBottom="10dp"
             android:text=""
+            android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/opcion1RadioButton"
@@ -65,7 +65,7 @@
             android:layout_width="384dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="-70dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="11dp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
@@ -131,8 +131,10 @@
             android:layout_marginTop="28dp"
             android:layout_marginEnd="18dp"
             android:layout_marginBottom="62dp"
-            android:text="Puntaje: 0"
-            android:textSize="18sp"
+            android:text="Score: 0"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/PreguntaText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/puntaje"
