--- a/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="@drawable/okk"
+    android:background="@color/ic_launcher_background"
     tools:context=".FirstFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -43,7 +43,7 @@
             android:id="@+id/Random_bt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="80dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="16dp"
             android:background="#25FFFD"
