--- a/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
@@ -8,9 +8,9 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/okk"
+        android:background="@color/ic_launcher_background"
         android:padding="16dp">
 
         <Button
@@ -32,14 +32,13 @@
 
         <TextView
             android:id="@+id/puntaje"
-            android:layout_width="205dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_width="103dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="24dp"
             android:layout_marginBottom="40dp"
             android:text="@string/here_is_the_name_s"
             android:textColor="@color/black"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/PreguntaText"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,8 +49,8 @@
             android:layout_width="0dp"
             android:layout_height="56dp"
             android:layout_marginTop="40dp"
-            android:layout_marginBottom="10dp"
             android:text=""
+            android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -65,21 +64,22 @@
             android:layout_width="384dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="-70dp"
-            android:layout_marginTop="10dp"
             android:layout_marginEnd="11dp"
             android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/questionImageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/PreguntaText">
 
             <RadioButton
                 android:id="@+id/opcion1RadioButton"
+                style="@android:style/Widget.Holo.CompoundButton.RadioButton"
                 android:layout_width="272dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginStart="100dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="213dp"
-                android:buttonTint="#FF1010"
+                android:button="@android:drawable/btn_star_big_off"
                 android:text=""
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,11 +87,12 @@
 
             <RadioButton
                 android:id="@+id/opcion2RadioButton"
-                android:layout_width="270dp"
+                android:layout_width="272dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="100dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="213dp"
+                android:button="@android:drawable/btn_star_big_off"
                 android:text=""
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -100,10 +101,11 @@
             <RadioButton
                 android:id="@+id/opcion3RadioButton"
                 android:layout_width="272dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginStart="100dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="213dp"
+                android:button="@android:drawable/btn_star_big_off"
                 android:text=""
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -111,17 +113,18 @@
 
         </RadioGroup>
 
+
         <ImageView
             android:id="@+id/questionImageView"
-            android:layout_width="272dp"
-            android:layout_height="251dp"
+            android:layout_width="279dp"
+            android:layout_height="248dp"
             android:layout_marginStart="136dp"
             android:layout_marginEnd="137dp"
+            android:adjustViewBounds="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/opcionesRadioGroup"
             app:srcCompat="@drawable/ic_launcher_foreground" />
-
 
         <TextView
             android:id="@+id/puntajeTextView"
@@ -131,14 +134,17 @@
             android:layout_marginTop="28dp"
             android:layout_marginEnd="18dp"
             android:layout_marginBottom="62dp"
-            android:text="Score: 0"
+            android:text="Punts: 0"
             android:textColor="#000000"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/PreguntaText"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.887"
             app:layout_constraintStart_toEndOf="@+id/puntaje"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.6" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
