--- a/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
@@ -43,17 +43,15 @@
             android:id="@+id/Random_bt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="250dp"
+            android:layout_marginTop="40dp"
             android:background="#25FFFD"
             android:backgroundTint="#25FFFD"
             android:text="@string/random_bt"
             android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nombreValor"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/opcionesRadioGroupFirst" />
 
         <EditText
             android:id="@+id/nombreValor"
@@ -83,6 +81,66 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+
+        <RadioGroup
+            android:id="@+id/opcionesRadioGroupFirst"
+            android:layout_width="417dp"
+            android:layout_height="173dp"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="40dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/Random_bt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nombreValor">
+
+            <RadioButton
+                android:id="@+id/opcion1"
+                style="@android:style/Widget.Holo.CompoundButton.RadioButton"
+                android:layout_width="291dp"
+                android:layout_height="34dp"
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="213dp"
+                android:button="@android:drawable/btn_star_big_off"
+                android:buttonTint="#4CAF50"
+                android:text="Fácil"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/PreguntaText" />
+
+            <RadioButton
+                android:id="@+id/opcion2"
+                android:layout_width="292dp"
+                android:layout_height="34dp"
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="213dp"
+                android:button="@android:drawable/btn_star_big_off"
+                android:buttonTint="#4CAF50"
+                android:text="Normal"
+                android:checked="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/opcion3RadioButton" />
+
+            <RadioButton
+                android:id="@+id/opcion3"
+                android:layout_width="292dp"
+                android:layout_height="34dp"
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="213dp"
+                android:button="@android:drawable/btn_star_big_off"
+                android:buttonTint="#4CAF50"
+                android:text="Difícil"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/opcion1" />
+
+        </RadioGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
