--- a/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
@@ -61,8 +61,8 @@
 
         <RadioGroup
             android:id="@+id/opcionesRadioGroup"
-            android:layout_width="384dp"
-            android:layout_height="wrap_content"
+            android:layout_width="417dp"
+            android:layout_height="173dp"
             android:layout_marginStart="-70dp"
             android:layout_marginEnd="11dp"
             android:orientation="vertical"
@@ -74,12 +74,13 @@
             <RadioButton
                 android:id="@+id/opcion1RadioButton"
                 style="@android:style/Widget.Holo.CompoundButton.RadioButton"
-                android:layout_width="272dp"
-                android:layout_height="match_parent"
+                android:layout_width="291dp"
+                android:layout_height="34dp"
                 android:layout_marginStart="100dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="213dp"
                 android:button="@android:drawable/btn_star_big_off"
+                android:buttonTint="#4CAF50"
                 android:text=""
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,12 +88,13 @@
 
             <RadioButton
                 android:id="@+id/opcion2RadioButton"
-                android:layout_width="272dp"
-                android:layout_height="match_parent"
+                android:layout_width="291dp"
+                android:layout_height="34dp"
                 android:layout_marginStart="100dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="213dp"
                 android:button="@android:drawable/btn_star_big_off"
+                android:buttonTint="#4CAF50"
                 android:text=""
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -100,12 +102,13 @@
 
             <RadioButton
                 android:id="@+id/opcion3RadioButton"
-                android:layout_width="272dp"
-                android:layout_height="match_parent"
+                android:layout_width="291dp"
+                android:layout_height="34dp"
                 android:layout_marginStart="100dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="213dp"
                 android:button="@android:drawable/btn_star_big_off"
+                android:buttonTint="#4CAF50"
                 android:text=""
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +122,7 @@
             android:layout_width="279dp"
             android:layout_height="248dp"
             android:layout_marginStart="136dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="137dp"
             android:adjustViewBounds="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -144,6 +148,21 @@
             app:layout_constraintStart_toEndOf="@+id/puntaje"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.6" />
+
+        <TextView
+            android:id="@+id/opcionSelecionadaText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="-30dp"
+            android:layout_marginBottom="40dp"
+            android:text="TextView"
+            android:textColor="#0150FF"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/PreguntaText"
+            app:layout_constraintEnd_toStartOf="@+id/puntajeTextView"
+            app:layout_constraintStart_toEndOf="@+id/puntaje"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
