--- a/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/ic_launcher_background"
+    android:visibility="visible"
     tools:context=".FirstFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -77,7 +78,7 @@
             android:drawableStart="@drawable/numeros"
             android:ems="10"
             android:inputType="text"
-            android:text="1"
+            android:text="Edat"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
